@@ -113,7 +113,7 @@ func (w *modelWriter) buildModelTransaction(out *model.Transaction, tx *Transact
 		out.SampleRate = &tx.traceContext.State.sampleRate
 	}
 
-	out.ParentID = model.SpanID(td.parentSpan)
+	out.ParentID = model.SpanID(tx.parentID)
 	out.Name = truncateString(td.Name)
 	out.Type = truncateString(td.Type)
 	out.Result = truncateString(td.Result)
@@ -136,7 +136,7 @@ func (w *modelWriter) buildModelSpan(out *model.Span, span *Span, sd *SpanData) 
 		out.SampleRate = &span.traceContext.State.sampleRate
 	}
 
-	out.ParentID = model.SpanID(sd.parentID)
+	out.ParentID = model.SpanID(span.parentID)
 	out.Name = truncateString(sd.Name)
 	out.Type = truncateString(sd.Type)
 	out.Subtype = truncateString(sd.Subtype)
