@@ -33,6 +33,7 @@ https://github.com/elastic/apm-agent-go/compare/v1.11.0...master[View commits]
 - Fix CaptureError to capture the request body when ELASTIC_APM_CAPTURE_BODY is enabled {pull}906[#(906)]
 - module/apmgrpc: record underlying HTTP/2 context {pull}904[#(904)]
 - module/apmot: handle http.host tag as url.Host {pull}954[#(954)]
+- apm: add add ParentID methods to Span and Transaction {pull}956[#(956)]
 
 [[release-notes-1.x]]
 === Go Agent version 1.x
